--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -8,9 +8,11 @@ RUN		chmod +x setUpNginx.sh
 
 RUN		bash setUpNginx.sh
 
-COPY	conf/nginx.conf /etc/nginx/nginx.conf
+COPY	conf/nginx.conf /etc/nginx/conf.d
 RUN		mkdir -p /var/run/nginx
 RUN		chown -R www-data:www-data /var/www/html
 RUN		chmod -R 775 /var/www/html
+
+EXPOSE 443
 
 CMD		["nginx" , "-g" ,"daemon off;"]
