--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,13 +1,21 @@
-version: '2.32.0'
 services:
-  nginx:
-    container_name: nginx
-    build : ./requirements/nginx/.
-    init: true
-    ports:
-      - "443:443"
   mariadb:
-    container_name: mariadb
     build: ./requirements/mariadb/.
     init: true
+    env_file:
+      - .env
+    networks:
+      - inception
+  wordpress:
+    build: ./requirements/wordpress/.
+    init: true
+    env_file:
+      - .env
+    depends_on:
+      - mariadb
+    networks:
+      - inception
 
+networks:
+  inception:
+    driver: bridge
