PUSH-0.0.6: fixing commit (docker compose work as we need now).

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,12 @@
 DB_NAME=INCEPTION_DATA_BASE
 DB_USER=HIBOUZID
 DB_PASS=ABCDE12345
-DB_HOST=mariadb
+DB_HOST=mariadb:3306
 URL_USER=hibouzid.42.fr
 TT_WP=tanjawi
 AD_PASSWORD=1337@@@
-AD_EMAIL=hibouzid1337@gmail.com
+AD_EMAIL=hibouzid137@gmail.com
 
-WP_USER=hibouzi
-WP_EMAIL=bouzidhicham51@gmail.com
+WP_USER=hibouzidd
+WP_EMAIL=bouzidhicam51@gmail.com
 
