--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,15 +1,22 @@
 server {
 	listen 443 ssl;
 	server_name hibouzid.42.fr;
-	root /var/www/;
+	root /var/www/html;
 
 	ssl_protocols TLSv1.2 TLSV1.3;
 	ssl_certificate  /etc/nginx/ssl/certif.crt;
 	ssl_certificate_key /etc/nginx/ssl/private.key;
 
 	index  index.php index.html index.htm;
+	location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
+
 	location ~ \.php$ {
-		include snippets/fastcgi-php.conf;
+		# include snippets/fastcgi-php.conf;
+		# fastcgi_pass wordpress:9000;
+		include fastcgi_params;
 		fastcgi_pass wordpress:9000;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	}
 }
