PUSH-0.0.7: working on the bonus part. FTP

--- a/srcs/.env
+++ b/srcs/.env
@@ -2,11 +2,13 @@ DB_NAME=INCEPTION_DATA_BASE
 DB_USER=HIBOUZID
 DB_PASS=ABCDE12345
 DB_HOST=mariadb:3306
-URL_USER=hibouzid.42.fr
-TT_WP=tanjawi
+URL_USER=https://hibouzid.42.fr
+TT_WP=hibouzid
+AD_USER=bouzid
 AD_PASSWORD=1337@@@
 AD_EMAIL=hibouzid137@gmail.com
 
-WP_USER=hibouzidd
-WP_EMAIL=bouzidhicam51@gmail.com
+WP_USER=hibouzid
+WP_PASSWORD=benrguir
+WP_EMAIL=bouzidhicham51@gmail.com
 
