--- a/srcs/requirements/bonus/redis-cache/Dockerfile
+++ b/srcs/requirements/bonus/redis-cache/Dockerfile
@@ -1,3 +1,12 @@
 FROM debian:buster
 
+RUN apt update -y && apt upgrade -y && apt install -y \
+		redis-server
 
+
+# COPY tools/Config.sh .
+
+EXPOSE 6379
+
+
+CMD ["redis-server", "--protected-mode", "no"]
