--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     networks:
       - inception
     volumes:
-      - mariadb:/var/lib/mysql
+      - mariadb-volumes:/var/lib/mysql
     expose:
       - 3306
     restart: always
@@ -35,7 +35,7 @@ services:
     networks:
       - inception
     volumes:
-      - wordPress:/var/www/html
+      - wordpress-volumes:/var/www/html
     expose:
       - 9000
     restart: always
@@ -52,7 +52,7 @@ services:
       networks:
         - inception
       volumes:
-        - wordPress:/var/www/html
+        - wordpress-volumes:/var/www/html
       restart: always
   ftp:
       container_name: ftp
@@ -68,7 +68,7 @@ services:
       networks:
         - inception
       volumes:
-        - wordPress:/var/www/html
+        - wordpress-volumes:/var/www/html
       restart: always
   adminer:
     container_name: adminer
@@ -79,5 +79,17 @@ services:
     networks:
       - inception
 volumes:
-  wordPress:
-  mariadb:
+  mariadb-volumes:
+    name: mariadb-volumes
+    driver: local
+    driver_opts:
+      device: /home/hibouzid/data/
+      o: bind
+      type: none
+  wordpress-volumes:
+    name: wordpress-volumes
+    driver: local
+    driver_opts:
+      device: /home/hibouzid/data/
+      o: bind
+      type: none
